# simplecaptcha-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  redis.conf  requirements.txt
app/data_structures/: redis.py
app/misc/: settings_reader.py
bot/: __main__.py
bot/data_structures/: captcha.py
bot/handlers/chat/: __init__.py  chat_join_request.py
bot/handlers/globals/: errors.py
bot/handlers/private/: __init__.py  callback_query.py  message.py
bot/misc/: configure.py  filename_utils.py  kb_generators.py  settings_reader.py  webhook.py
bot/services/: captcha.py  captcha_generator.py  captcha_scheduler.py  lock_user.py  scheduler.py
eva/: __main__.py
eva/data_structures/: captcha.py
eva/filters/: chat_type.py
eva/handlers/chat/: __init__.py  chat_join_request.py  chat_member.py
eva/handlers/globals/: errors.py
eva/handlers/private/: __init__.py  callback_query.py  message.py
eva/misc/: configure.py  filename_utils.py  kb_generators.py  paths.py  settings_reader.py  utils.py  webhook.py
eva/services/: captcha.py  captcha_generator.py  captcha_scheduler.py  lock_user.py  scheduler.py
worker/: __main__.py
worker/tasks/: join_expired.py
