# Notes
# Create environment with chosen Python version: `uv venv --python 3.12`
# To install dependencies: `uv sync`
# To list packages: `uv pip list`
# To list for conflicts: `uv pip check`

[project]
name = "captchabot"
version = "0.1.0"
description = ""
authors = [
    { author = "Mikhail Smolnikov", email = "smolnik.mikhail@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
    "aiogram>=3",
    "arq>=0.26.0",
    "pydantic-settings>=2.5.2",
]

[project.optional-dependencies]
dev = ["black>=22.6.0", "isort>=5.10.1", "flake8>=4.0.1"]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
